--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
+        "cypress": "^13.9.0",
         "datatables.net": "^2.0.6",
         "datatables.net-bs4": "^2.0.6",
         "laravel-vite-plugin": "^1.0.2",
