Manejando validaciones y errores. Agregando Inputmask para dar formato a campos numericos

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "illuminate/database": "*",
+        "laravel-lang/lang": "^15.5",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9"
     },
