--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
+        "inputmask": "^5.0.9",
         "jquery": "^3.7.1"
     }
 }
